--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
     "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
     "lucide-react": "^0.548.0",
-    "next": "16.0.0",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "next": "^16.1.6",
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4",
     "recharts": "^3.3.0",
     "tailwind-merge": "^3.3.1"
   },
